Aside
- Создание:
   * Theme
   * Subject
- Обновление:
   * Theme
   * Subject
- Удаление:
   * Theme
   * Subject

Обновилась документация Swagger под каждый запрос Theme и Subject
