# routes/api_v1.php
@@ -1,7 +1,11 @@
 <?php
 
 use App\Http\Controllers\Admin\Post\Subject\CreateSubjectController;
+use App\Http\Controllers\Admin\Post\Subject\DeleteSubjectController;
+use App\Http\Controllers\Admin\Post\Subject\UpdateSubjectController;
 use App\Http\Controllers\Admin\Post\Theme\CreateThemeController;
+use App\Http\Controllers\Admin\Post\Theme\DeleteThemeController;
+use App\Http\Controllers\Admin\Post\Theme\UpdateThemeController;
 use App\Http\Controllers\Site\Aside\GetAsideController;
 use App\Http\Controllers\Site\Test\GetController;
 use Illuminate\Http\Request;
@@ -23,18 +27,37 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 });
 
+// Для теста
+Route::prefix('test')->group(function () {
+    Route::post('theme', [DeleteThemeController::class, 'delete']);
+});
+
 Route::group(['middleware' => 'auth:sanctum'], function() {
 
-    Route::get('get', [GetController::class, 'get']);
+    Route::get('get', [GetController::class, 'get']); // Тестовый
 
     Route::prefix('forum')->group(function () {
         Route::get('aside/get', [GetAsideController::class, 'get']);
     });
 
     Route::prefix('admin')->group(function() {
-        Route::post('create/theme', [CreateThemeController::class, 'create']);
-        Route::post('create/subject', [CreateSubjectController::class, 'create']);
+        Route::prefix('create')->group(function () {
+            Route::post('theme', [CreateThemeController::class, 'create']);
+            Route::post('subject', [CreateSubjectController::class, 'create']);
+        });
+
+        Route::prefix('update')->group(function () {
+            Route::post('theme', [UpdateThemeController::class, 'update']);
+            Route::post('subject', [UpdateSubjectController::class, 'update']);
+        });
+
+        Route::prefix('delete')->group(function () {
+            Route::post('theme', [DeleteThemeController::class, 'delete']);
+            Route::post('subject', [DeleteSubjectController::class, 'delete']);
+        });
     });
 });
 Route::get('test/aside', [\App\Http\Controllers\Site\Test\TestController::class, 'test']);
+
+
 
